# ma_crf_bookmarks

./: .gitignore  .pylintrc  README.md  main_onefile.spec  main_standard.spec  pyproject.toml  pytest.ini  report.html  requirements.txt  test_notebook.ipynb
.github/workflows/: base-pipe.yml
config/: template-config.yml
doc/: _BioNTech_Colours.xlsx  python_access_guide.docx  python_dev_guide.docx
help_src/: Show_all_QT_SP_Icons.py  png_to_ico.ipynb
images/: mas_color_code.yml
input/: 1404-0066_4-Design_Specifications_030520260920.xlsx  crf bookmarks_v2.ipynb  sds_cdisc.xlsx
src/ma_crf_bookmarks/: main.py
src/ma_crf_bookmarks/app/: base_app.py  main_app_window.py
src/ma_crf_bookmarks/app/gui/: create_bookmarks_widget.py  output_file_widget.py  select_file_widget.py
src/ma_crf_bookmarks/gui/: body_widget.py  header_widget.py  logo_painter.py  msg_box.py  status_bar_handler.py  status_panel.py
src/ma_crf_bookmarks/gui/default_elements/: default_button.py  default_label.py  default_style_values.py
src/ma_crf_bookmarks/logic/: bookmark_logic.py  demo_logic.py
src/ma_crf_bookmarks/utils/: config.py  hide_termina.py  logger.py  resource_paths.py  user.py  worker.py
src/ma_pytemp/: main.py
src/ma_pytemp/app/: base_app.py  main_app_window.py
src/ma_pytemp/gui/: body_widget.py  header_widget.py  msg_box.py  status_bar_handler.py
src/ma_pytemp/gui/default_elements/: default_button.py  default_label.py
src/ma_pytemp/utils/: config.py  logger.py  user.py
test/: conftest.py  expected_values.py  test_bookmark_creation.py  test_demo.py
